--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "chart.js": "^4.4.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "framer-motion": "^10.16.16",
+    "lodash": "^4.17.21",
     "mongoose": "^7.3.1",
     "next": "13.4.8",
     "postcss": "8.4.24",
