--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "chart.js": "^4.4.1",
     "eslint": "8.44.0",
@@ -21,11 +20,14 @@
     "framer-motion": "^10.16.16",
     "lodash": "^4.17.21",
     "mongoose": "^7.3.1",
-    "next": "13.4.8",
-    "postcss": "8.4.24",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4"
   }
 }
