--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^4.1.3",
     "bcrypt": "^5.1.0",
     "chart.js": "^4.4.1",
     "eslint": "8.44.0",
@@ -27,7 +28,9 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-toastify": "^10.0.5"
+    "react-hook-form": "^7.55.0",
+    "react-toastify": "^10.0.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
