--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^4.1.3",
     "bcrypt": "^5.1.0",
     "chart.js": "^4.4.1",
+    "dayjs": "^1.11.13",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "framer-motion": "^10.16.16",
